--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
   <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
   <script src="https://unpkg.com/topojson-client@3"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script>
-  <script src="https://unpkg.com/d3-simple-slider/build/d3-simple-slider.js"></script>
+  <!--OLD SLIDER <script src="https://unpkg.com/d3-simple-slider/build/d3-simple-slider.js"></script>-->
+  <script src="https://unpkg.com/d3-simple-slider"></script>
 
   <!--Local Files -->
   <link rel="stylesheet" href="style.css">
